# a-tlas

./: .gitignore  Cargo.toml  LICENSE
shaders/compute/: tree64.glsl  voxel_compute.glsl
shaders/compute/include/: common.glsl  material.glsl  node.glsl
shaders/debug/lines/: frag.glsl  vert.glsl
shaders/rt/: common.glsl  deps.glsl  simple.rchit  simple.rgen  simple.rint  simple.rmiss
shaders/slang/: common.slang  compile.bat  tree64.slang
src/: app.rs  async_worker.rs  lib.rs  main.rs  player_controller.rs
src/physics/: mod.rs
src/rt/: acceleration_structure.rs  mod.rs
src/tasks/: as_update.rs  compute.rs  debug.rs  mod.rs  render.rs  rt.rs  update_as.rs
src/world/: chunk.rs  loader.rs  mod.rs  voxel.rs
